samples/_failures_safe/1761127978_9f735c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed53d5d7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ed53d5d7.c:162:59: error: expected ‘)’ at end of input
  162 |     if (lexer == NULL || tokens == NULL || max_tokens <= 0
      |        ~                                                  ^
      |                                                           )
./samples/SAFE/__tmp_ed53d5d7.c:162:5: error: expected declaration or statement at end of input
  162 |     if (lexer == NULL || tokens == NULL || max_tokens <= 0
      |     ^~
